--- a/src/Makefile
+++ b/src/Makefile
@@ -2,9 +2,19 @@
 
 all:
 	g++ server.cpp -o server
+	g++ client.cpp -o client
 
 server:
 	g++ server.cpp -o server
 
-clean:
+client:
+	g++ client.cpp -o client
+
+clean-all:
+	rm -rf server client
+
+clean-server:
 	rm -rf server
+
+clean-client:
+	rm -rf client
