--- a/src/Makefile
+++ b/src/Makefile
@@ -2,13 +2,13 @@
 
 all:
 	g++ server.cpp -o server
-	g++ client.cpp -o client
+	g++ client.cpp -o client -lpthread
 
 server:
 	g++ server.cpp -o server
 
 client:
-	g++ client.cpp -o client
+	g++ client.cpp -o client -lpthread
 
 clean-all:
 	rm -rf server client
