--- a/src/Makefile
+++ b/src/Makefile
@@ -2,20 +2,24 @@
 
 all: program
 
-program: main.o server.o client.o
+program: main.o server.o peer.o
 	g++ main.o server.o -o server
-	g++ main.o client.o -lpthread -o client
+	g++ main.o peer.o -lpthread -o peer
+	cp -t ../bin/ server peer
+	rm *.o
 
 main.o:
 	g++ -c main.cpp
+	cp main.o ../obj/
 
 server.o:
 	g++ -c server.cpp
+	cp server.o ../obj/
 
-client.o:
-	g++ -c client.cpp
+peer.o:
+	g++ -c peer.cpp
+	cp peer.o ../obj/
 
 clean:
-	rm -rf *.o
-	rm -rf server client
+	rm server peer
 
