--- a/src/Makefile
+++ b/src/Makefile
@@ -2,9 +2,10 @@
 
 all: program
 
-program: main.o server.o peer.o
+program: main.o server.o peer.o client.o
 	g++ main.o server.o -o server
 	g++ main.o peer.o -lpthread -o peer
+	g++ main.o client.o -lpthread -o client
 	cp -t ../bin/ server peer
 	rm *.o
 
@@ -20,6 +21,10 @@ peer.o:
 	g++ -c peer.cpp
 	cp peer.o ../obj/
 
+client.o:
+	g++ -c client.cpp
+	cp client.o ../obj/
+
 clean:
-	rm server peer
+	rm server client peer
 
